--- a/Roombrah/bin/.gitignore
+++ b/Roombrah/bin/.gitignore
@@ -1,14 +1,1 @@
-/EZ$1.class
-/EZ.class
-/EZCircle.class
-/EZElement.class
-/EZGroup.class
-/EZImage.class
-/EZInteraction.class
-/EZLine.class
-/EZPolygon.class
-/EZRectangle.class
-/EZSound.class
-/EZText.class
-/roombrah.class
-/wallMilestone1.class
+/roombrahRemastered.class
