changed ai script

--- a/Roombrah/bin/.gitignore
+++ b/Roombrah/bin/.gitignore
@@ -1,1 +1,6 @@
-/roombrahRemastered.class
+/roombrahRemasteredWithAI_INCOMPLETE.class
+/Island.class
+/IslandMain.class
+/roombaC.class
+/roombrah_test.class
+/roombrah.class
