--- a/new_project/bin/.gitignore
+++ b/new_project/bin/.gitignore
@@ -1,13 +1,1 @@
-/HelloWorld.class
-/Month.class
-/Pancake.class
-/PancakeMain.class
-/SimpleArray.class
-/array_test.class
-/forLoops.class
-/lab6sI.class
-/moveCirc.class
-/name.class
-/prelab4_3.class
-/prelab_4_4.class
-/tick.class
+/prelab10/
