--- a/InClass/bin/.gitignore
+++ b/InClass/bin/.gitignore
@@ -1,2 +1,19 @@
+/EZ$1.class
+/EZ.class
+/EZCircle.class
+/EZElement.class
+/EZGroup.class
+/EZImage.class
+/EZInteraction.class
+/EZLine.class
+/EZPolygon.class
+/EZRectangle.class
+/EZSound.class
+/EZText.class
+/HelloWorld.class
+/HelloWorld_original.class
+/Lab4/
+/Week1.class
+/lab_2/
 /lab_3/
 /test_java.class
